<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.bignerdranch.android.finalproject374.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_weight="70"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/logout_button"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/NoteLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="200">

                <EditText
                    android:id="@+id/add_note_edit_text"
                    android:ems="10"
                    android:hint="@string/add_note"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_weight="1"
                android:id="@+id/add_note_button"
                android:text="@string/action_save"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </LinearLayout>



    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main"/>

</android.support.design.widget.CoordinatorLayout>
